# TextMacro

./: .gitignore  Cargo.toml  build.ps1  build.rs
installer/: textmacro.nsi
src/: main.rs
src/core/: action_executor.rs  engine.rs  macro_matcher.rs  mod.rs  startup.rs  trigger_detector.rs
src/injector/: mod.rs  text_injector.rs
src/input/: keyboard_listener.rs  mod.rs
src/models/: config.rs  engine_commands.rs  engine_responses.rs  macro_model.rs  mod.rs  notification.rs  palette_item.rs  stats.rs
src/storage/: atomic_writer.rs  backup.rs  error.rs  json_loader.rs  macro_repository.rs  mod.rs  paths.rs
src/ui/: app.rs  macro_editor.rs  macro_list.rs  mod.rs  overlays.rs  scratch.rs  settings_panel.rs
