[package]
name = "textmacro"
version = "0.1.0"
edition = "2021"
description = "A lightweight automation tool for creating macros triggered by typed text, keyboard shortcuts, or system events"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
