[package]
name = "textmacro"
version = "0.1.0"
edition = "2021"
description = "A lightweight automation tool for creating macros triggered by typed text, keyboard shortcuts, or system events"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rdev = "0.5.3"
log = "0.4.29"
arboard = "3.6.1"
iced = { version = "0.12", features = ["tokio"] }
iced_aw = { version = "0.9.0", features = ["context_menu", "menu", "card", "modal", "floating_element"] }
rfd = "0.17.2"
simplelog = "0.12.2"
tray-icon = "0.21.3"
auto-launch = "0.6.0"
